package com.example.homework.Decorator_pattern;

public abstract class Sheep {
    protected int life = 5;

    public abstract void displayAbilities();
}
